Safari365 Prod/src/objects/PhotoBook__c.object
<CustomObject>
    <fields>
        <fullName>Delivery_Notes__c</fullName>
        <label>Delivery Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>May_we_use_your_photographs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>May we use your  photographs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PhotoBooks</relationshipLabel>
        <relationshipName>PhotoBooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PhotoBook_Stage__c</fullName>
        <label>PhotoBook Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Loaded</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photobook_Title__c</fullName>
        <label>Photobook Title</label>
        <type>TextArea</type>
    </fields>
    <label>PhotoBook</label>
    <nameField>
        <label>PhotoBook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PhotoBooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>